# screener

./: .envrc  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/screener/: __init__.py  config.py  main.py
src/screener/clients/: client.py  polygon_client.py
src/screener/data/: client.py
src/screener/models/: Quote.py  __init__.py  close.py  ohlc.py  utils.py
